fix: fix the style of layout issues (#19)

--- a/apps/kennisbank-frontend/src/app/globals.css
+++ b/apps/kennisbank-frontend/src/app/globals.css
@@ -5,6 +5,8 @@ body {
 }
 :root {
   --utrecht-space-around: 1;
+  --utrecht-page-header-padding-block-start: 3rem;
+  --utrecht-page-header-padding-block-end: 2rem ;
 }
 
 * {
@@ -23,6 +25,7 @@ a {
 .article-list {
   display: grid;
   gap: 1rem;
+  margin-block: 2rem;
 }
 
 .article-card {
